# yy-boss

./: .gitattributes  Cargo.toml  LICENSE-MIT  README.md  TODO.md  output.txt
.github/workflows/: main.yml
src/: bin.rs  cli.rs  directory_manager.rs  dirty_handler.rs  errors.rs  folders.rs  lib.rs  main.rs  resources.rs  resources_ext.rs  utils.rs  yy_resource.rs  yy_resource_handler.rs  yyp_boss.rs
src/boss/: directory_manager.rs  dirty_handler.rs  errors.rs  folder_graph.rs  pipelines.rs  project_metadata.rs  resource_handler.rs  resource_names.rs  resources.rs  sprite_manager.rs  utils.rs  yy_resource.rs  yy_resource_handler.rs  yyp_boss.rs
src/boss/folders/: file.rs  folder_graph.rs  folder_graph_error.rs  folder_graph_manager.rs  folder_graph_member.rs  resource_names.rs  vfs.rs
src/boss/resources_ext/: sprite_ext.rs
src/cli/: input.rs  logging.rs  main_loop.rs  output.rs  startup.rs  yy_cli.rs
src/errors/: startup.rs
src/resources_ext/: dummy.rs  note_ext.rs  object_ext.rs  paths_ext.rs  room_ext.rs  script_ext.rs  shader_ext.rs  sound_ext.rs  sprite_ext.rs  tile_set_ext.rs  unidentified_resources.rs  yyp_ext.rs  yyp_serialization.rs
tests/: folders.rs  pipelines.rs  sprites.rs  test_yyp_boss.rs  trivial_tests.rs
tests/common/: mod.rs
tests/examples/project_database/yyp_boss0/: test2.yyp
tests/examples/project_database/yyp_boss0/datafiles/: main.rtf
tests/examples/project_database/yyp_boss0/objects/Object2/: Object2.yy  Step_0.gml
tests/examples/project_database/yyp_boss0/objects/Test4/: Draw_0.gml  Step_0.gml  Test4.yy
tests/examples/project_database/yyp_boss0/options/main/: options_main.yy
tests/examples/project_database/yyp_boss0/rooms/Room1/: Room1.yy
tests/examples/project_database/yyp_boss0/rooms/Room2/: Room2.yy
tests/examples/project_database/yyp_boss1/: LICENSE  README.md  anchor.yyp
tests/examples/project_database/yyp_boss1/objects/luiMenu/: Create_0.gml  Draw_64.gml  Step_0.gml  luiMenu.yy
tests/examples/project_database/yyp_boss1/objects/objExample/: Create_0.gml  objExample.yy
tests/examples/project_database/yyp_boss1/options/main/: options_main.yy
tests/examples/project_database/yyp_boss2/: package-lock.json  package.json  red-shirt-innoquous.yyp
tests/examples/proofs/folder_add_nonroot/: folder_add_nonroot.yyp
tests/examples/proofs/folder_add_root/: folder_add_root.yyp
tests/examples/proofs/pipelines_proof/: pipelines_proof.yyp
tests/examples/proofs/pipelines_proof/.boss/: pipeline_manifest.json  sprites.json
tests/examples/proofs/sprite_add/: sprite_add.yyp
tests/examples/proofs/sprite_add_proof/: sprite_add_proof.yyp
tests/examples/proofs/yyp_boss_sanity/: yyp_boss_sanity.yyp
tests/examples/test_proj/: simple.yyp  test_proj.yyp
(+129 files in other folders)
