[package]
name = "yy-boss"
version = "0.3.0"
authors = ["Jonathan Spira <jjspira@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A collection of typings for GameMaker Studio 2 YY and YYP files"
repository = "https://github.com/NPC-Studio/yy-boss"
readme = "README.md"

[lib]
name = "yy_boss"
path = "src/lib.rs"

[[bin]]
name = "yy-boss"
path = "src/bin.rs"

[dependencies]
yy-typings = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1"
log = "0.4"
image = "0.23"
regex = "1.3"
strum = "0.18"
strum_macros = "0.18"
thiserror = "1"
maplit = "1"

[dev-dependencies]
include_dir = { version = "0.6", features = ["search"]}
pretty_assertions = "0.6.1"
console = "0.11.3"