[package]
name = "yy-boss"
version = "0.5.1"
authors = ["Jonathan Spira <jjspira@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A collection of typings for GameMaker Studio 2 YY and YYP files"
repository = "https://github.com/NPC-Studio/yy-boss"
readme = "README.md"

[lib]
name = "yy_boss"
path = "src/lib.rs"

[[bin]]
name = "yy-boss-cli"
path = "src/bin.rs"

[dependencies]
yy-typings = { path = "../yy-typings", version = "0.4.1"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
semver = {version = "0.10", features = ["serde"] }

strum = "0.18"
strum_macros = "0.18"

anyhow = "1.0"
thiserror = "1.0"

log = "0.4"
image = "0.23.9"
regex = "1.3"
maplit = "1.0"
clap = "2.33"

once_cell = "1.4"
simple-logging = "2.0"
log-panics = "2.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
include_dir = { version = "0.6", features = ["search"]}
pretty_assertions = "0.6.1"
console = "0.11.3"