[package]
name = "yy-boss"
version = "0.9.3"
authors = ["Jonathan Spira <jjspira@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A collection of typings for GameMaker Studio 2 YY and YYP files"
repository = "https://github.com/NPC-Studio/yy-boss"
readme = "README.md"

[dependencies]
yy-typings = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision", "preserve_order"] }
serde_yaml = "0.8"
semver = { version = "1.0", features = ["serde"] }

strum = "0.22"
strum_macros = "0.22"

anyhow = "1.0"
thiserror = "1.0"

log = "0.4"
image = "0.23.14"
regex = "1.3"
maplit = "1.0"
clap = "2.33"

once_cell = "1.4"
simple-logging = "2.0"
log-panics = "2.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
camino = "1.1.6"

[dev-dependencies]
include_dir = { version = "0.6", features = ["search"] }
pretty_assertions = "1"
console = "0.15"
